--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -7,7 +7,7 @@ log-level=info
 # log-size k,m,g
 log-size=10m
 # 日志保存位置
-log-file=/tmp/smartdns.log
+log-file=/var/log/smartdns.log
 # 日志归档个数
 log-num=2
 # 是否持久化缓存 自动。当 cache-file 所在的位置有超过 128 MB 的可用空间时启用，否则禁用。
