--- a/config/immortalwrt/2102.config
+++ b/config/immortalwrt/2102.config
@@ -5095,8 +5095,8 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH is not set
-# CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE_CM is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-udp2raw is not set
