--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -13,7 +13,7 @@ log-num 2
 # 是否持久化缓存 自动。当 cache-file 所在的位置有超过 128 MB 的可用空间时启用，否则禁用。
 cache-persist yes
 # 域名结果缓存个数
-cache-size 50000
+cache-size 50000000
 # 缓存持久化文件路径
 cache-file /tmp/smartdns.cache
 # 测速模式选择
