--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -17,7 +17,7 @@ cache-size 50000000
 # 缓存持久化文件路径
 cache-file /tmp/smartdns.cache
 # 测速模式选择
-speed-check-mode ping,tcp:80,tcp:443
+speed-check-mode tcp:443,tcp:80,ping
 # 过期缓存服务功能
 serve-expired yes
 # 首次查询响应模式
