--- a/.github/workflows/ImmortalWrt_2102_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_2102_X86-64.yml
@@ -10,6 +10,8 @@ name: Build ImmortalWrt21.02 X86_64
 
 on:
   repository_dispatch:
+  schedule:
+    - cron: "0 16 * * 1"
   workflow_dispatch:
     inputs:
       ssh:
